--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
 }
 
 #boton-mascota {
-  width: 180px;
+  width: 120px;
   height: 40px;
   border-radius: 20px;
   background: transparent;
@@ -78,7 +78,7 @@ input:checked + label {
   box-sizing: border-box;
   border-radius: 20px;
   border-color: transparent;
-  width: 180px;
+  width: 70px;
   color: white;
   font-family: 'Poppins', sans-serif;
 }
@@ -113,6 +113,15 @@ color: #BED754;
   align-items: center;
 }
 
+#ver-mapa {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#mapa {
+  border: 2px solid white;
+}
 @media (max-width:360px){
   .tarjetas {
     flex-direction: column; 
